# huffman

./: Cargo.toml  README.md
src/: decode.rs  encode.rs  error.rs  lib.rs  main.rs
