[package]
name = "huffman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["alloc"]
alloc = ["bitvec/alloc"]

[dependencies]
anyhow = "1.0.79"
bitvec = { version = "1.0.1", features = ["alloc"]}
serde = {version = "1.0.195", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.111"
