[package]
name = "huffman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["alloc"]
alloc = ["bitvec/alloc"]

[dependencies]
bitvec = { version = "1.0.1", features = ["alloc"]}
clap = { version = "4.4.16", features = ["derive"]}
hex = "0.4.3"
serde = {version = "1.0.195", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.111"
thiserror = "1.0.56"
